--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,11 @@ h4,
 p {
   margin: 0;
   padding: 0;
+  font-size: 1.6rem;
+}
+a,
+button {
+  transition: 0.3s all;
 }
 .suptitle,
 .section__title {
@@ -118,6 +123,9 @@ p {
 .features {
   @include paddingsTB(87px, 100px);
 }
+.features__title {
+  margin-bottom: 70px;
+}
 .features__item {
   margin-bottom: 30px;
   text-align: center;
@@ -128,7 +136,66 @@ p {
 }
 .features__h3 {
   @include fontProps(2.4rem, 700, $darkGray);
+  margin-bottom: 10px;
 }
 .features__text {
   @include fontProps(1.6rem, 300, $darkGray);
+}
+//coffee
+.coffee {
+  @include paddingsTB(90px, 100px);
+  overflow: hidden;
+  position: relative;
+}
+.coffee__bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: $primaryColor;
+  width: 384px;
+  height: 100%;
+  z-index: -5;
+}
+.coffee__title {
+  margin-bottom: 72px;
+}
+.coffee__row {
+  display: flex;
+  margin-bottom: 30px;
+}
+.coffee__slide:not(:last-child) {
+  margin-right: 30px;
+}
+.coffee__img {
+  height: 100%;
+  width: 235px;
+  img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+}
+.coffee__content {
+  padding: 42px;
+  background-color: #fff;
+  width: 320px;
+}
+.coffee__price {
+  @include fontProps(2rem, 600, $accentGold);
+}
+.coffee__name {
+  @include marginTB(8px, 24px);
+  @include fontProps(2.4rem, 700, $darkGray);
+}
+.coffee__text {
+  margin-bottom: 35px;
+}
+.coffee__btn {
+  @include noBorder;
+  @include button(134px, 32px, $accentGold);
+  @include fontProps(1.6rem, 700, $accentLight);
+  border-radius: 16px;
+  &:hover {
+    background-color: darken($accentGold, 5);
+  }
 }
