--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,11 +70,11 @@ button {
 }
 .coffee__prev-btn,
 .combo__prev-btn {
-  left: -20px;
+  left: -30px;
 }
 .coffee__next-btn,
 .combo__next-btn {
-  right: -20px;
+  right: -30px;
 }
 //header----------------------
 .header__left,
@@ -95,7 +95,7 @@ button {
   font-family: "Montserrat";
   position: absolute;
   bottom: 64px;
-  left: 130px;
+  left: 30%;
   span {
     color: #f9fbff;
     background-color: $accentGold;
@@ -233,7 +233,7 @@ button {
   img {
     width: 100%;
     height: 100%;
-    background-size: cover;
+    object-fit: cover;
   }
 }
 .coffee__content {
@@ -264,6 +264,7 @@ button {
 .giftset {
   @include paddingsTB(86px, 125px);
   position: relative;
+  overflow: hidden;
 }
 .giftset__bg {
   left: 0;
@@ -373,14 +374,13 @@ button {
 }
 .combo__img {
   @include widthHeight(100%, 300px);
-  margin-bottom: 42px;
   img {
     @include widthHeight(100%);
     object-fit: cover;
   }
 }
 .combo__inner {
-  padding: 0 42px 42px;
+  padding: 42px;
 }
 .combo__price {
   @include fontProps(2rem, 600, $accentGold);
